Update test template in test environment

--- a/testenvironment/templates/index.twig
+++ b/testenvironment/templates/index.twig
@@ -1,1 +1,10 @@
-hello world
+{% static %}
+    <html>
+    <head>
+        <title>Test title</title>
+    </head>
+    <body>
+    <div>Test body</div>
+    </body>
+    </html>
+{% endstatic %}
